# MAESMA

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTES.md  README.md  ROADMAP.md  SECURITY.md  paper.typ
.github/workflows/: ci.yml
animation/: package-lock.json  package.json  tsconfig.json
animation/src/: ALifeScene.tsx  AgentSwarmScene.tsx  DiscoveryScene.tsx  FullSystemScene.tsx  InferenceScene.tsx  KnowledgebaseScene.tsx  LoopScene.tsx  MAESMAAnimation.tsx  Root.tsx  TitleScene.tsx  shared.tsx
crates/maesma-agents/: Cargo.toml
crates/maesma-agents/src/: a2a_gateway.rs  active_learning.rs  assembly.rs  autonomous_observation.rs  benchmarking.rs  closure.rs  data_scout.rs  diagnostics.rs  discovery.rs  ensemble.rs  evolution.rs  foundation_model.rs  geoengineering.rs  hypothesis.rs  intent_scope.rs  kb_retrieval.rs  lib.rs  meta_learner.rs  msd_coupling.rs  optimizer.rs  planetary_defense.rs  provenance.rs  regime_detector.rs  registry.rs  runtime_sentinel.rs  salient_dynamics.rs  scale_negotiator.rs  scenario_discovery.rs  selection.rs  sensitivity.rs  skill_librarian.rs  traits.rs  trophic.rs
crates/maesma-api/: Cargo.toml
crates/maesma-api/src/: lib.rs  routes.rs  state.rs
crates/maesma-cli/: Cargo.toml
crates/maesma-cli/src/: main.rs
crates/maesma-compiler/: Cargo.toml
crates/maesma-compiler/src/: lib.rs  schedule.rs  selection.rs  validators.rs
crates/maesma-core/: Cargo.toml
crates/maesma-core/src/: automaton.rs  data_contracts.rs  data_plane.rs  diagnostics.rs  error.rs  evolution.rs  families.rs  graph.rs  impact.rs  lib.rs  manifest.rs  metrics.rs  msd.rs  observations.rs  ontology.rs  optimization.rs  process.rs  process_discovery.rs  protocols.rs  regime.rs  skills.rs  spatial.rs  topology.rs  units.rs  variables.rs
crates/maesma-federation/: Cargo.toml
crates/maesma-federation/src/: lib.rs
crates/maesma-inference/: Cargo.toml
crates/maesma-inference/src/: earth2.rs  lib.rs  observation.rs
crates/maesma-knowledgebase/: Cargo.toml
crates/maesma-knowledgebase/src/: lib.rs  observation_seed.rs  ontology_seed.rs  query.rs  seed.rs  seed_extended.rs  store.rs
crates/maesma-processes/: Cargo.toml
crates/maesma-processes/src/: coupling.rs  lib.rs
crates/maesma-processes/src/atmosphere/: mod.rs
crates/maesma-processes/src/biogeochemistry/: mod.rs
crates/maesma-processes/src/cryosphere/: mod.rs
crates/maesma-processes/src/ecology/: mod.rs
crates/maesma-processes/src/evolution/: mod.rs
crates/maesma-processes/src/fire/: cfsfbp.rs  mod.rs  rothermel.rs
crates/maesma-processes/src/geology/: mod.rs
crates/maesma-processes/src/geomorphology/: mod.rs
crates/maesma-processes/src/human_systems/: mod.rs
crates/maesma-processes/src/hydrology/: mod.rs
crates/maesma-processes/src/ocean/: mod.rs
crates/maesma-processes/src/radiation/: mod.rs
crates/maesma-processes/src/trophic_dynamics/: mod.rs
crates/maesma-runtime/: Cargo.toml
crates/maesma-runtime/src/: embedding.rs  event_store.rs  events.rs  geo_control.rs  health.rs  heartbeat.rs  lib.rs  observation_adapters.rs  pipeline.rs  refinement.rs  scheduler.rs  skill_store.rs  state.rs  subcycling.rs
crates/maesma-runtime/tests/: integration.rs
dashboard/: package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/agents/: page.tsx
dashboard/src/app/evolution/: page.tsx
dashboard/src/app/federation/: page.tsx
dashboard/src/app/foundation-models/: page.tsx
dashboard/src/app/knowledgebase/: page.tsx
dashboard/src/app/observations/: page.tsx
dashboard/src/app/optimization/: page.tsx
dashboard/src/app/provenance/: page.tsx
dashboard/src/app/regimes/: page.tsx
dashboard/src/app/sapg/: page.tsx
dashboard/src/app/simulation/: page.tsx
dashboard/src/app/skills/: page.tsx
dashboard/src/components/: Sidebar.tsx
dashboard/src/components/cards/: AgentStatusCard.tsx  HeartbeatCard.tsx  KbSummaryCard.tsx  ParetoFrontCard.tsx  RegimeMapCard.tsx  SapgGraphCard.tsx  SkillEvolutionCard.tsx  SurvivalTierCard.tsx
ontology/: README.md  cross_domain_schema.yaml  dataset_schema.yaml  geoengineering_schema.yaml  metric_schema.yaml  planetary_defense_schema.yaml  process_schema.yaml
paper/: paper.typ  references.yml
process_registry/: README.md
