[package]
name = "maesma-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
maesma-core = { path = "../maesma-core" }
maesma-knowledgebase = { path = "../maesma-knowledgebase" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait = "0.1"
chrono.workspace = true
