[package]
name = "maesma-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
maesma-core = { path = "../maesma-core" }
maesma-knowledgebase = { path = "../maesma-knowledgebase" }
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true
tracing.workspace = true
