[package]
name = "maesma-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
maesma-core = { path = "../maesma-core" }
serde.workspace = true
serde_json.workspace = true
ndarray.workspace = true
tracing.workspace = true
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
