[package]
name = "maesma-knowledgebase"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
maesma-core = { path = "../maesma-core" }
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
blake3.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid.workspace = true
