[package]
name = "maesma-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
maesma-core = { path = "../maesma-core" }
maesma-compiler = { path = "../maesma-compiler" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
ndarray.workspace = true
